--- a/style.css
+++ b/style.css
@@ -85,3 +85,11 @@ div{
 @media (min-width: 1201px) {
    
 }
+
+p{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+h1{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
