--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ div{
   .footer-section{
     text-align: start;
   }
-  @media screen and {max-width: 600px) {
+  @media (min-width:300px)  and {max-width: 600px) {
   div{
     width: 100%;
   }
