--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ div{
     float: left;
     width: 33.33%;
     padding: 5px;
-    border: 3px solid;
+    border: 3px solid transperent;
     border-radius: 50px; 
     background-color:wheat;  
   }
